; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_timer.c_mod_timer_pinned.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_timer.c_mod_timer_pinned.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timer_list = type { i64 }

@TIMER_PINNED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mod_timer_pinned(%struct.timer_list* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.timer_list*, align 8
  %5 = alloca i64, align 8
  store %struct.timer_list* %0, %struct.timer_list** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load %struct.timer_list*, %struct.timer_list** %4, align 8
  %7 = getelementptr inbounds %struct.timer_list, %struct.timer_list* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load %struct.timer_list*, %struct.timer_list** %4, align 8
  %13 = call i64 @timer_pending(%struct.timer_list* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  store i32 1, i32* %3, align 4
  br label %21

16:                                               ; preds = %11, %2
  %17 = load %struct.timer_list*, %struct.timer_list** %4, align 8
  %18 = load i64, i64* %5, align 8
  %19 = load i32, i32* @TIMER_PINNED, align 4
  %20 = call i32 @__mod_timer(%struct.timer_list* %17, i64 %18, i32 0, i32 %19)
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %16, %15
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i64 @timer_pending(%struct.timer_list*) #1

declare dso_local i32 @__mod_timer(%struct.timer_list*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
